Bug 821304 - Unbreak plugins that use subclasses of CALayer in CoreAnimation mode. r=bgirard